--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required />
-            <input type="hidden" name="_next" value="http://127.0.0.1:5500/thank-you.html">
+            <input type="hidden" name="_next" value="https://businessarchive.github.io/Back2fit/thank-you.html">
             <input type="hidden" name="_captcha" value="false">
 
             <button type="submit">Get My Free Ebook</button>
